Fix CI: apply ruff format and fix plugin test isolation
- Apply ruff format to all 13 files (only check was run before, not format)
- Remove -p no:agentrace from pytest CI command so traced_agent fixture
  is available when running test_plugin.py tests
- Both lint and test jobs should now pass on all Python versions (3.10-3.12)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - run: pip install -e ".[dev]"
-      - run: pip install pytest-cov
-      - run: pytest --cov=agentrace --cov-report=xml --junitxml=results.xml -p no:agentrace -q
+      - run: pip install -e ".[dev]" pytest-cov
+      # Run with plugin active so traced_agent fixture is available
+      - run: pytest --cov=agentrace --cov-report=xml --junitxml=results.xml -q
       - uses: actions/upload-artifact@v4
         if: always()
         with:
