--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,15 @@ name = "agentrace"
 version = "0.1.0"
 description = "Transparent tracing and instrumentation for LangGraph agents"
 requires-python = ">=3.10"
+license = {text = "MIT"}
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
+    "Typing :: Typed",
+]
 dependencies = [
     "langgraph",
     "langchain-core",
